@@ -18,6 +18,7 @@ Change Log:
 - Fix invitation code Add-on so entering correct codes does not trigger an error message
 - Fix for caching issues on WP Engine
 - Fix missing error messages when registering username that is already in use
+- Fix error during import "class MS_Gateway_Admin not found"
 
 1.0.2.2
 ----------------------------------------------------------------------
